[gd_scene load_steps=8 format=3 uid="uid://puw8u16e2oqa"]

[ext_resource type="Script" path="res://Scenes/Canon/canon.gd" id="1_djkmq"]
[ext_resource type="AudioStream" uid="uid://cr56u7sqfktt" path="res://Ressources/Sounds/Canon/Plasma Grenade 005.wav" id="2_kwa1q"]
[ext_resource type="PackedScene" uid="uid://cujjyy8hd6kjk" path="res://Scenes/Canon/canon_node.tscn" id="2_ukktj"]
[ext_resource type="Script" path="res://Scenes/Canon/TextVFX.gd" id="3_3bues"]
[ext_resource type="AudioStream" uid="uid://cmststv1wsgrp" path="res://Ressources/Sounds/Canon/Megaton Far 002.wav" id="3_5m7bw"]
[ext_resource type="FontFile" uid="uid://bxno7c1h1ee5j" path="res://Ressources/Fonts/Linebeam.ttf" id="3_7fwto"]
[ext_resource type="AudioStream" uid="uid://dvkgim1xpsm0b" path="res://Ressources/Sounds/Placeholders/win.wav" id="4_2vr8l"]

[node name="Canon" type="Node2D"]
script = ExtResource("1_djkmq")
canon_shoot_sound = ExtResource("2_kwa1q")
canon_impact_sound = Array[Resource]([ExtResource("3_5m7bw")])
canon_reload_sound = ExtResource("4_2vr8l")

[node name="Node_Container" type="Node2D" parent="."]
z_index = 10

[node name="LaserNode" parent="Node_Container" instance=ExtResource("2_ukktj")]

[node name="LaserNode2" parent="Node_Container" instance=ExtResource("2_ukktj")]
offset_left = 0.0
offset_top = -275.0
offset_right = 190.0
offset_bottom = -53.0

[node name="LaserNode3" parent="Node_Container" instance=ExtResource("2_ukktj")]
offset_left = 0.0
offset_top = 55.0
offset_right = 190.0
offset_bottom = 275.0

[node name="LaserNode4" parent="Node_Container" instance=ExtResource("2_ukktj")]
offset_left = 95.0
offset_right = 285.0

[node name="LaserNode5" parent="Node_Container" instance=ExtResource("2_ukktj")]
offset_left = -285.0
offset_right = -95.0

[node name="LaserNode6" parent="Node_Container" instance=ExtResource("2_ukktj")]
offset_left = -190.0
offset_top = 55.0
offset_right = 0.0
offset_bottom = 275.0

[node name="LaserNode7" parent="Node_Container" instance=ExtResource("2_ukktj")]
offset_left = -190.0
offset_top = -275.0
offset_right = 0.0
offset_bottom = -55.0

[node name="LaserNode8" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -475.0
offset_right = -285.0

[node name="LaserNode9" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -380.0
offset_top = 55.0
offset_right = -190.0
offset_bottom = 275.0

[node name="LaserNode10" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -380.0
offset_top = -275.0
offset_right = -190.0
offset_bottom = -55.0

[node name="LaserNode11" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 190.0
offset_top = -275.0
offset_right = 380.0
offset_bottom = -53.0

[node name="LaserNode12" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 190.0
offset_top = 55.0
offset_right = 380.0
offset_bottom = 275.0

[node name="LaserNode13" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 285.0
offset_right = 475.0

[node name="LaserNode14" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_top = -440.0
offset_bottom = -220.0

[node name="LaserNode15" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 95.0
offset_top = -440.0
offset_right = 285.0
offset_bottom = -220.0

[node name="LaserNode16" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -285.0
offset_top = -440.0
offset_right = -95.0
offset_bottom = -220.0

[node name="LaserNode17" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_top = 220.0
offset_bottom = 440.0

[node name="LaserNode18" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 95.0
offset_top = 220.0
offset_right = 285.0
offset_bottom = 440.0

[node name="LaserNode19" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -285.0
offset_top = 220.0
offset_right = -95.0
offset_bottom = 440.0

[node name="LaserNode20" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -665.0
offset_right = -475.0

[node name="LaserNode21" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -570.0
offset_top = 55.0
offset_right = -380.0
offset_bottom = 275.0

[node name="LaserNode22" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -570.0
offset_top = -275.0
offset_right = -380.0
offset_bottom = -55.0

[node name="LaserNode23" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -475.0
offset_top = -440.0
offset_right = -285.0
offset_bottom = -220.0

[node name="LaserNode24" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -475.0
offset_top = 220.0
offset_right = -285.0
offset_bottom = 440.0

[node name="LaserNode25" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 380.0
offset_top = -275.0
offset_right = 570.0
offset_bottom = -53.0

[node name="LaserNode26" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 380.0
offset_top = 55.0
offset_right = 570.0
offset_bottom = 275.0

[node name="LaserNode27" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 475.0
offset_right = 665.0

[node name="LaserNode28" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 285.0
offset_top = -440.0
offset_right = 475.0
offset_bottom = -220.0

[node name="LaserNode29" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 285.0
offset_top = 220.0
offset_right = 475.0
offset_bottom = 440.0

[node name="LaserNode30" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 0.0
offset_top = 385.0
offset_right = 190.0
offset_bottom = 605.0

[node name="LaserNode31" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -190.0
offset_top = 385.0
offset_right = 0.0
offset_bottom = 605.0

[node name="LaserNode32" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -380.0
offset_top = 385.0
offset_right = -190.0
offset_bottom = 605.0

[node name="LaserNode33" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 190.0
offset_top = 385.0
offset_right = 380.0
offset_bottom = 605.0

[node name="LaserNode34" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 0.0
offset_top = -605.0
offset_right = 190.0
offset_bottom = -385.0

[node name="LaserNode35" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -190.0
offset_top = -605.0
offset_right = 0.0
offset_bottom = -385.0

[node name="LaserNode36" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -380.0
offset_top = -605.0
offset_right = -190.0
offset_bottom = -385.0

[node name="LaserNode37" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 190.0
offset_top = -605.0
offset_right = 380.0
offset_bottom = -385.0

[node name="LaserNode38" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_top = -769.0
offset_bottom = -549.0

[node name="LaserNode39" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 95.0
offset_top = -769.0
offset_right = 285.0
offset_bottom = -549.0

[node name="LaserNode40" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -285.0
offset_top = -769.0
offset_right = -95.0
offset_bottom = -549.0

[node name="LaserNode41" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_top = 550.0
offset_bottom = 770.0

[node name="LaserNode42" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 95.0
offset_top = 550.0
offset_right = 285.0
offset_bottom = 770.0

[node name="LaserNode43" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -285.0
offset_top = 550.0
offset_right = -95.0
offset_bottom = 770.0

[node name="LaserNode44" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 475.0
offset_top = -440.0
offset_right = 665.0
offset_bottom = -218.0

[node name="LaserNode45" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 570.0
offset_top = -275.0
offset_right = 760.0
offset_bottom = -55.0

[node name="LaserNode46" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 380.0
offset_top = -605.0
offset_right = 570.0
offset_bottom = -385.0

[node name="LaserNode47" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -666.0
offset_top = 220.0
offset_right = -476.0
offset_bottom = 442.0

[node name="LaserNode48" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -571.0
offset_top = 385.0
offset_right = -381.0
offset_bottom = 605.0

[node name="LaserNode49" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -761.0
offset_top = 55.0
offset_right = -571.0
offset_bottom = 275.0

[node name="LaserNode50" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -760.0
offset_top = -275.0
offset_right = -570.0
offset_bottom = -55.0

[node name="LaserNode51" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -665.0
offset_top = -440.0
offset_right = -475.0
offset_bottom = -220.0

[node name="LaserNode52" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -570.0
offset_top = -605.0
offset_right = -380.0
offset_bottom = -385.0

[node name="LaserNode53" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 380.0
offset_top = 385.0
offset_right = 570.0
offset_bottom = 605.0

[node name="LaserNode54" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 475.0
offset_top = 220.0
offset_right = 665.0
offset_bottom = 440.0

[node name="LaserNode55" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 570.0
offset_top = 55.0
offset_right = 760.0
offset_bottom = 275.0

[node name="LaserNode56" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 285.0
offset_top = -769.0
offset_right = 475.0
offset_bottom = -549.0

[node name="LaserNode57" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 285.0
offset_top = 550.0
offset_right = 475.0
offset_bottom = 770.0

[node name="LaserNode58" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -476.0
offset_top = 550.0
offset_right = -286.0
offset_bottom = 770.0

[node name="LaserNode59" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -475.0
offset_top = -769.0
offset_right = -285.0
offset_bottom = -549.0

[node name="LaserNode60" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = -855.0
offset_right = -665.0

[node name="LaserNode61" parent="Node_Container" instance=ExtResource("2_ukktj")]
visible = false
offset_left = 665.0
offset_right = 855.0

[node name="ClickTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -2.644
max_polyphony = 3
bus = &"Sounds"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -2.644
max_polyphony = 3
bus = &"Sounds"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
volume_db = -2.644
max_polyphony = 3
bus = &"Sounds"

[node name="Canon UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -818.0
offset_top = -1042.0
offset_right = 813.0
offset_bottom = 906.0

[node name="Label" type="Label" parent="Canon UI"]
z_index = 10
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -593.0
offset_top = 138.23
offset_right = 593.0
offset_bottom = 434.085
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.705882, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_7fwto")
theme_override_font_sizes/font_size = 86
text = "ERROR 142-C
MANUAL AIM REQUIERED
PATTERN MALFUNCTION ..."
vertical_alignment = 2
script = ExtResource("3_3bues")
speed = 4
numberOfFlashes = 5
delay = 0.5
fade = true

[node name="Label2" type="Label" parent="Canon UI"]
z_index = 10
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -588.5
offset_top = -273.0
offset_right = 530.5
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.705882, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_7fwto")
theme_override_font_sizes/font_size = 86
text = "/ ! \\ CAUTION / ! \\"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_3bues")
speed = 4
numberOfFlashes = 5
delay = 0.5
fade = true
